--- a/admin/html/interfaz/login.html
+++ b/admin/html/interfaz/login.html
@@ -1,6 +1,6 @@
    <form method="post"  role="form">
 	  <div class="form-group">
-	  	<center><img src="../images/diseno/logo.png" /></center>
+	  	<center><img src="../images/diseno/logo.png" width="50%" /></center>
 	  </div>
 	  <?php if(count($errores) > 0){ ?>
 	  <div class="form-group">
