--- a/html/interfaz/home.html
+++ b/html/interfaz/home.html
@@ -24,7 +24,7 @@
                     
                         <div class="section-heading text-center">
                         <div class="wow bounceInDown" data-wow-delay="0.2s">
-                            <h2 ><?php echo $quienes[0]['titulo']?></h2>
+                            <h2 ><?php echo utf8_decode($quienes[0]['titulo'])?></h2>
                         </div>
                         <!--<p class="wow bounceInUp" data-wow-delay="0.3s">
                             Hacemos cosas dulces para hacer tu vida más feliz
