Diseño primera fase

--- a/html/interfaz/home.html
+++ b/html/interfaz/home.html
@@ -17,14 +17,14 @@
      
 
     <!-- Section: about -->
-    <section id="about" class="home-section">
+    <section id="about" class="home-section" style="background: #fff">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     
                         <div class="section-heading text-center">
                         <div class="wow bounceInDown" data-wow-delay="0.2s">
-                            <h2 ><?php echo utf8_decode($quienes[0]['titulo'])?></h2>
+                            <h2 ><?php echo $quienes[0]['titulo']?></h2>
                         </div>
                         <!--<p class="wow bounceInUp" data-wow-delay="0.3s">
                             Hacemos cosas dulces para hacer tu vida más feliz
