--- a/html/interfaz/index.html
+++ b/html/interfaz/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
     <meta name="google-site-verification" content="sEuTsyHYR2KteHlxT5BlsnpF2pw2d0fdKRcjlLdwFmo" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <meta name="description" content="<?php echo $info_id[0]['notas']?>" />
@@ -20,7 +21,8 @@
 	<link href="<?php echo _DOMINIO ?>css/animate.css" rel="stylesheet" />
     <link href="<?php echo _DOMINIO ?>css/style.css" rel="stylesheet">
 	<link href="<?php echo _DOMINIO ?>color/default.css" rel="stylesheet">
-	<link href="<?php echo _DOMINIO ?>css/sweetalert.css" rel="stylesheet">
+  <link href="<?php echo _DOMINIO ?>css/sweetalert.css" rel="stylesheet">
+	<link href="<?php echo _DOMINIO ?>css/tuPanalera.css" rel="stylesheet">
 	<link rel="shortcut icon" href="<?php echo _DOMINIO ?>images/diseno/favicon.ico">
 
 	<script>
@@ -54,6 +56,7 @@
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
 </script>
+
 <script type="text/javascript">
     window.smartlook||(function(d) {
     var o=smartlook=function(){ o.api.push(arguments)},h=d.getElementsByTagName('head')[0];
