--- a/admin/html/interfaz/login.html
+++ b/admin/html/interfaz/login.html
@@ -1,6 +1,6 @@
    <form method="post"  role="form">
 	  <div class="form-group">
-	  	<center><img src="../images/diseno/logo.png" width="50%" /></center>
+	  	<center><img src="../images/diseno/logoWeb.png" width="100%" /></center>
 	  </div>
 	  <?php if(count($errores) > 0){ ?>
 	  <div class="form-group">
@@ -25,6 +25,6 @@
 	   		<input type="password" name="contrasena" class="form-control" placeholder="Clave"/>
 	   </div>
 	   <div class="form-group">
-	   	<center><input type="submit"  name="entrar" value="Ingresar" class="btn btn-default" /></center>
+	   	<center><input type="submit"  name="entrar" value="Ingresar" class="btn btn-default" style="background: #84BFAE;color:#fff;text-shadow: none;text-transform: uppercase;font-weight: bold;border:none" /></center>
 	   </div>
    </form>
