Catalogo pañales aprobado

--- a/admin/html/interfaz/contenido.html
+++ b/admin/html/interfaz/contenido.html
@@ -163,7 +163,8 @@ else {?>
 					<option value="3" <?if($tipo_contenido == 3){echo 'selected';}?>>Catalogo</option>
 					<option value="2" <?if($tipo_contenido == 2){echo 'selected';}?>>Categoria Catalogo</option>
 					<option value="8" <?if($tipo_contenido == 8){echo 'selected';}?>>Subcategoria Catalogo</option>
-					<option value="9" <?if($tipo_contenido == 9){echo 'selected';}?>>Linea</option>
+					<option value="9" <?if($tipo_contenido == 9){echo 'selected';}?>>L&iacute;nea</option>
+					<option value="61" <?if($tipo_contenido == 61){echo 'selected';}?>>Sub L&iacute;nea</option>
 					<option value="10" <?if($tipo_contenido == 10){echo 'selected';}?>>Producto</option>
 					<option value="4" <?if($tipo_contenido == 4){echo 'selected';}?>>Galer&iacute;a de Imagenes</option>
 					<option value="21" <?if($tipo_contenido == 21){echo 'selected';}?>>Imagen</option>
