--- a/html/interfaz/index.html
+++ b/html/interfaz/index.html
@@ -100,7 +100,9 @@
     <!-- Custom Theme JavaScript -->
     <script src="<?php echo _DOMINIO ?>js/custom.js"></script>
     
-
+    <script type="text/javascript">
+      var dominio = "<?php echo _DOMINIO?>";
+    </script>
 </body>
 </html>
 <!--<?php include(_PLANTILLAS."interfaz/menu_principal.php") ?>-->
