--- a/html/interfaz/cabezote.html
+++ b/html/interfaz/cabezote.html
@@ -29,13 +29,13 @@
             </div>
             <div class="col-md-2 col-lg-2 col-xs-12 col-sm-12"> 
 
-                 <div class="dropdown" style="margin:15% 5% 0 0;background: #f0f0f0;border:1px solid #d7d7d7;float: left">
+                 <div class="dropdown" style="margin:15% 5% 0 0;background: #f0f0f0;border:1px solid #d7d7d7;float: right;">
                   <a class="btn dropdown-toggle" type="button" data-toggle="dropdown" style="margin:0 10% 0 0; !important;"><i class="fa fa-shopping-bag fa-1x" aria-hidden="true"></i>&nbsp;<b class="caret"></b></a>
                   <ul class="dropdown-menu message-dropdown text-right" style="min-width: 300px;padding:10%;right:0;border:none" id="carritoCont">
                     </ul>
                 </div>
 
-                <div class="dropdown" style="margin:15% 5% 0 0;background: #f0f0f0;border:1px solid #d7d7d7;float: left">
+                <div class="dropdown" style="margin:15% 5% 0 0;background: #f0f0f0;border:1px solid #d7d7d7;float: right">
                   <a class="btn dropdown-toggle" type="button" data-toggle="dropdown" style="margin:0 10% 0 0; !important;"><i class="glyphicon glyphicon-user"></i>&nbsp;<b class="caret"></b></a>
                   <ul class="dropdown-menu message-dropdown text-left" style="min-width: 300px;padding:10%;right:0;border:none">
                         <li class="message-preview text-center" style="width: 100%">
@@ -61,29 +61,33 @@
   <div class="container-fluid transUpper" style="padding:2% 0 0 0">
     <div class="container">
         <div class="row">
-          <div class="col-sm-12 col-xs-12 col-md-4 col-lg-3">
+          <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
+              <center>
               <!-- btn 1-->
-                <center><a class="btnBig btn btn-primary btn1" href="<?php echo _DOMINIO?>productos/1314/panales_panitos" id="dropdownMenuButton">
+                <a class="btnBig btn btn-primary btn1" href="<?php echo _DOMINIO?>productos/1314/panales_panitos" id="dropdownMenuButton">
                   PAÑALES Y PAÑITOS
-                </a></center>
-          </div>
-          <div class="col-sm-12 col-xs-12 col-md-4 col-lg-3">
+                </a>
+
               <!-- btn 1-->
-                <center><a class="btnBig btn btn-primary btn2" href="<?php echo _DOMINIO?>producto/1339/nutricion_intantil" id="dropdownMenuButton">
+                <a class="btnBig btn btn-primary btn2" href="<?php echo _DOMINIO?>productos/1339/nutricion_intantil" id="dropdownMenuButton">
                   NUTRICIÓN INFANTIL
-                </a></center>
-          </div>
-          <div class="col-sm-12 col-xs-12 col-md-4 col-lg-3">
+                </a>
+
               <!-- btn 1-->
-                <center><a class="btnBig btn btn-primary btn3" href="<?php echo _DOMINIO?>producto/1340/cuidado_infantil" id="dropdownMenuButton">
+                <a class="btnBig btn btn-primary btn3" href="<?php echo _DOMINIO?>productos/1340/cuidado_infantil" id="dropdownMenuButton">
                   CUIDADO Y INFANTIL
-                </a></center>
-          </div>
-          <div class="col-sm-12 col-xs-12 col-md-4 col-lg-3">
+                </a>
+
               <!-- btn 1-->
-                <center><a class="btnBig btn btn-primary btn4" href="<?php echo _DOMINIO?>producto/1341/ropa_infantil" id="dropdownMenuButton">
+                <a class="btnBig btn btn-primary btn4" href="<?php echo _DOMINIO?>productos/1341/ropa_infantil" id="dropdownMenuButton">
                   ROPA Y ACCESORIOS
-                </a></center>
+                </a>
+
+              <!-- btn 1-->
+                <a class="btnBig btn btn-info btn5" href="<?php echo _DOMINIO?>productos/1407/coches_corrales" id="dropdownMenuButton">
+                  COCHES Y CORRALES
+                </a>
+                </center>
           </div>
 
         </div>
