Ajustes del diseño web

--- a/html/interfaz/index.html
+++ b/html/interfaz/index.html
@@ -13,7 +13,8 @@
 
     <!-- CSS -->
     <link href="<?php echo _DOMINIO ?>css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="<?php echo _DOMINIO ?>font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+
 	<link href="<?php echo _DOMINIO ?>css/nivo-lightbox.css" rel="stylesheet" />
 	<link href="<?php echo _DOMINIO ?>css/nivo-lightbox-theme/default/default.css" rel="stylesheet" type="text/css" />
 	<link href="<?php echo _DOMINIO ?>css/owl.carousel.css" rel="stylesheet" media="screen" />
@@ -99,6 +100,7 @@
 	
     <!-- Custom Theme JavaScript -->
     <script src="<?php echo _DOMINIO ?>js/custom.js"></script>
+    <script src="<?php echo _DOMINIO ?>js/tupa.js"></script>
     
     <script type="text/javascript">
       var dominio = "<?php echo _DOMINIO?>";
