--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Tu Pa&ntilde;alera</title>
+	<style type="text/css">
+		*{padding: 0;margin:0;}
+		body{background: url(fondo.png)}
+	</style>
 </head>
 <body>
 
 	<center>
-		<img src="proxima.png" width="50%" />
+		<img src="proxima.png" />
 	</center>
 
 </body>
