Ajustes de diseño

--- a/html/interfaz/home.html
+++ b/html/interfaz/home.html
@@ -29,12 +29,6 @@
 <div class="container-fluid" style="padding: 5%;background: #598EC0;color:#fff">
     <div class="container">
         <h2 style="color:#fff;text-align: center">Productos destacados</h2>
-        <div class="controls pull-right">
-                        <a class="left fa fa-chevron-left btn btn-primary" href="#carousel-example"
-                        data-slide="prev"><i class="icon-chevron-left"></i></a><a class="right fa fa-chevron-right btn btn-primary" href="#carousel-example"
-                            data-slide="next"><i class="icon-chevron-right"></i></a>
-                </div>
-
        <div class="row">
            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
@@ -80,6 +74,16 @@
                 </div><!-- Carrousel Inner-->
              </div>    
 
+           </div>
+           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="controls">
+                <center>
+                      <a class="left fa fa-chevron-left btn btn-primary" href="#carousel-example"
+                      data-slide="prev"><i class="icon-chevron-left"></i></a>&nbsp;
+                      <a class="right fa fa-chevron-right btn btn-primary" href="#carousel-example"
+                          data-slide="next"><i class="icon-chevron-right"></i></a>
+                       </center>   
+              </div>
            </div>
            <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
                <!-- <div class="card">
