botones del menu movil

--- a/html/interfaz/cabezote.html
+++ b/html/interfaz/cabezote.html
@@ -175,6 +175,9 @@
             <li> <a style="color:#fff !important" class="btnBig btn btn-block btn-info btn5" href="<?php echo _DOMINIO?>productos/1407/coches_corrales" id="dropdownMenuButton">
                   COCHES Y CORRALES
                 </a></li>
+
+            <li><a  class="btnBig btn btn-block btn-default" href="<?php echo _DOMINIO?>quienes-somos">QUI&Eacute;NES SOMOS</a></li>
+            <li><a  class="btnBig btn btn-block btn-default" href="<?php echo _DOMINIO?>productos">CAT&Aacute;LOGO</a></li>    
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
