Página web al 100%

--- a/admin/html/interfaz/contenido.html
+++ b/admin/html/interfaz/contenido.html
@@ -145,11 +145,11 @@ else {?>
 		</tr>
 		<tr>
 			<td>
-				<!--<input type="hidden" name="tipo_contenido" value="<?=$tipo_contenido?>">-->
+				<input type="hidden" name="tipo_contenido" value="<?=$tipo_contenido?>">
 				<input type="hidden" id="id_padre" name="id_padre" size="53" value="<? echo $id_padre;?>">
 			</td>
 		</tr>
-		
+		<!--
 		<tr>
 			<td>
 				Tipo Contenido
@@ -220,7 +220,7 @@ else {?>
 					<option value="60" <?if($tipo_contenido == 60){echo 'selected';}?>>Oferta</option>
 				</select>
 			</td>
-		</tr>
+		</tr>-->
 				
 		
 		<tr id="profundidad">
@@ -645,7 +645,7 @@ else {?>
 		</tr>
 		<tr id="imagen2">
 			<td>
-				<?if($tipo_contenido == 42){echo "Banner Minisite <br> <span style='font-weight:bold;font-size:0.7em'><i><i>(450 X 123 PX)</i></span>";}else{echo "Imagen Medio";}?>
+				<?if($tipo_contenido == 10){echo "Imagen obsequio";}else{echo "Imagen Medio";}?>
 			</td>
 			<td align="left">
 				<table align="left">
