--- a/admin/html/interfaz/lateral.html
+++ b/admin/html/interfaz/lateral.html
@@ -3,6 +3,8 @@
 	<ul class="dropdown-menu">
 		<li><a href="index.php?id=1&editar=1">Informaci&oacute;n y contacto</a></li>
 		<li><a href="index.php?id=13&editar=13">Quiénes Somos</a></li>
+		<li><a href="index.php?id=1408">Banners Home</a></li>
+		<li><a href="index.php?id=1411">P&aacute;ginas amigas</a></li>
 		<li><a href="index.php?id=1330&editar=1330">Gracias</a></li>
 	</ul>
 </li>
