--- a/html/interfaz/default.html
+++ b/html/interfaz/default.html
@@ -1,4 +1,25 @@
-<div class="container-fluid" style="padding: 5% 0 5% 0">
+<div class="container-fluid" >
+  <div class="container">
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
+
+                <ol class="breadcrumb" style="background: transparent;margin:5% 0 0 0">
+                  <?php foreach($resursiva as $r){ ?>
+                        <?php if($r['id'] != 10 ){ ?>
+                            <?php if($r['id'] == $id){ ?>
+                                <li class="active"><?php echo utf8_encode($r['titulo'])?></li>
+                            <?php }else{ ?>
+                                <li><a href="<?php  echo _DOMINIO ?>productos/<?php echo $r['id'] ?>/<?php echo $funciones->armaUrl($r['titulo'] )?>"><?php echo utf8_encode($r['titulo']) ?></a></li>
+                            <?php } ?>
+                        <?php } ?>
+                  <?php } ?>
+                </ol>
+            
+        </div>
+    </div>
+  </div>
+</div>
+<div class="container-fluid" style="padding: 5% 0 5% 0;background: #fff;margin:2% 0" >
     <div class="container">
         <div class="row">
               <div class="col-sm-12 col-xs-12 col-md-4 col-lg-4">
