--- a/html/interfaz/home.html
+++ b/html/interfaz/home.html
@@ -25,46 +25,83 @@
             </div>      
         </div>
     </section>-->
+<?php  
+    if($tablet_browser > 0 or $mobile_browser > 0) 
+    { 
+      $cantidadMostrar = 1;
+    }
+    else
+    {
+      $cantidadMostrar = 3 ;
+    }
+?>
+
 <?php if(count($destacados) > 0){?>
 <div class="container-fluid" style="padding: 5%;background: #598EC0;color:#fff">
     <div class="container">
-        <h2 style="color:#fff;text-align: center">Productos destacados</h2>
+        <h2 class="visible-lg visible-md" style="color:#fff;text-align: center;font-family: 'Roboto';text-align: center">
+          <img src="<?php  echo _DOMINIO ?>images/diseno/titulo1.png" width="30%"/>  
+          <a class="left fa fa-chevron-left btn btn-danger" href="#carousel-example"
+          data-slide="prev"><i class="icon-chevron-left"></i></a>&nbsp;
+          <a class="right fa fa-chevron-right btn btn-danger" href="#carousel-example"
+              data-slide="next"><i class="icon-chevron-right"></i></a>
+        </h2>
+
+        <h2 class="visible-sm-block  visible-xs" style="color:#fff;text-align: center;font-family: 'Roboto';text-align: center;margin:0 0 2% 0 ">
+          <img src="<?php  echo _DOMINIO ?>images/diseno/titulo1.png" width="100%"/><br><br>
+          <a class="left fa fa-chevron-left btn btn-danger" href="#carousel-example"
+          data-slide="prev"><i class="icon-chevron-left"></i></a>&nbsp;
+          <a class="right fa fa-chevron-right btn btn-danger" href="#carousel-example"
+              data-slide="next"><i class="icon-chevron-right"></i></a>
+        </h2>
+
        <div class="row">
            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-
             <div id="carousel-example" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="item active"> 
 
                         <div class="row">
 
-                            <?php $cont=0;foreach($destacados as $dest){ $cont++;?>
-                                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" style="margin:0 0 5% 0">
-                                   <div class="card" style="padding: 5%;background: #fff;border-radius: 5px;box-shadow: 0px 0px 5px #7A7858;text-align: center">
-                                      <img class="card-img-top" src="<?php echo _DOMINIO?>images/<?php echo  $dest['imagen']?>" alt="Card image cap" width="100%">
-                                      <div class="card-block" style="margin:2% 0 0 0">
-                                        <h4 class="card-title" style="margin:0">
-                                        <?php echo utf8_encode($dest['titulo'])?></h4><br>
-                                        <h3 style="padding: 0;color:#F34235">
-                                        $<?php echo number_format($dest['precio_normal'],0,",",".") ?>
-                                        <?php if($dest['precio_oferta']!= ""or $dest['precio_oferta'] != 0){ ?>
-                                        <span class="small" style="text-decoration: line-through;">$<?php echo number_format($dest['precio_oferta'],0,",",".") ?></span>
-                                        <?php } ?>
-                                        </h3>
-                                        <!--<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>-->
-                                        <a href="<?php  echo _DOMINIO ?>productos/<?php  echo $dest['id'] ?>/<?php echo $funciones->armaUrl($dest['titulo'])?>" class="btn btn-skin btn-block">LO QUIERO!</a>
-                                      </div>
-                                    </div>
-                                </div>
-                                <?php if(count($destacados) > 3){?>
-                                    <?php if($cont == 3){ $cont=0; ?>
+                            <?php $cont=0;$cont2=0;foreach($destacados as $dest){ $cont++;$cont2++;?>
+                                <div class="col-sm-12 col-xs-12 col-md-4 col-lg-4" style="position: relative;margin:0 0 5% 0">
+                                  <?php if($dest['imagen2'] != ""){ ?>
+                                    <div style="position: absolute;top:0;right:0;background: url('<?php echo _DOMINIO?>images/<?php echo  $dest['imagen2']?>') no-repeat center center;width: 100px;height: 100px;background-size:200%;border-radius: 100px;box-shadow: 0px 0px 3px #999"></div>
+                                  <?php } ?>
 
+                                    <div class="card" style="padding: 5%;background: #fff;border-radius: 5px;box-shadow: 0px 0px 5px #f6f6f6;text-align: center">
+                                        <img class="card-img-top" src="<?php echo _DOMINIO?>images/<?php echo  $dest['imagen']?>" alt="Card image cap" width="100%">
+                                        <div class="card-block" style="margin:2% 0 0 0">
+                                          <h4 class="card-title" style="margin:0;font-family:'Roboto';font-weight: bold">
+                                          <?php echo utf8_encode($dest['titulo'])?></h4>
+                                          <p style="margin:2% 0 2% 0;color:#999">
+                                            <?php if($dest['resumen'] != ""){ ?>
+                                              <?php echo substr($dest['resumen'],0,30)?>...
+                                            <?php }else{?>
+                                              Producto destacado 
+                                            <?php } ?>
+                                          </p>
+                                          <!--<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>-->
+                                        </div>
+                                        <div class="card-footer">
+                                            
+                                          <h2 style="padding: 0;color:#DA007F;font-family:'Roboto';">
+                                          $<?php echo number_format($dest['precio_normal'],0,",",".") ?>
+                                          <?php if($dest['precio_oferta']!= ""or $dest['precio_oferta'] != 0){ ?>
+                                          <span class="small" style="text-decoration: line-through;">$<?php echo number_format($dest['precio_oferta'],0,",",".") ?></span>
+                                          <?php } ?>
+                                          </h2>
+                                          <a href="<?php  echo _DOMINIO ?>productos/<?php  echo $dest['id'] ?>/<?php echo $funciones->armaUrl($dest['titulo'])?>" class="btn btn-skin "> VER PRODUCTO </a>
+
+                                        </div>
+                                      </div>
+                                </div>
+                                    <?php if(($cont % $cantidadMostrar) == 0 && $cont2 != count($destacados)){ $cont=0; ?>
                                         </div><!-- cierro row-->
                                         </div>
                                          <div class="item"> 
                                          <div class="row">
                                     <?php }?>
-                                <?php }?>
 
                              <?php } ?>   
 
@@ -75,25 +112,10 @@
              </div>    
 
            </div>
-           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <div class="controls">
-                <center>
-                      <a class="left fa fa-chevron-left btn btn-primary" href="#carousel-example"
-                      data-slide="prev"><i class="icon-chevron-left"></i></a>&nbsp;
-                      <a class="right fa fa-chevron-right btn btn-primary" href="#carousel-example"
-                          data-slide="next"><i class="icon-chevron-right"></i></a>
-                       </center>   
-              </div>
-           </div>
-           <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-               <!-- <div class="card">
-                  <div class="card-block">
-                    <h4 class="card-title" style="text-align: center">Carrito de compras</h4>
-                    <div style="float: left;width: 100%" id="carritoCont">
-                        
-                    </div>
-                  </div>
-                </div>-->
+           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 visible-sm-block visible-xs">
+              <center>
+                <a href="<?php echo _DOMINIO ?>promociones"><img src="<?php echo _DOMINIO ?>images/diseno/bannerPromo.png" width="100%"></a>
+              </center>
            </div>
        </div>
     </div>
