--- a/html/interfaz/index.html
+++ b/html/interfaz/index.html
@@ -24,52 +24,11 @@
 	<link href="<?php echo _DOMINIO ?>color/default.css" rel="stylesheet">
   <link href="<?php echo _DOMINIO ?>css/sweetalert.css" rel="stylesheet">
 	<link href="<?php echo _DOMINIO ?>css/tuPanalera.css" rel="stylesheet">
-	<link rel="shortcut icon" href="<?php echo _DOMINIO ?>images/diseno/favicon.ico">
-
-	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-	  ga('create', 'UA-74486910-1', 'auto');
-	  ga('send', 'pageview');
-
-	</script>
-	<script type="text/javascript">
-		var dominio   = "<?php echo _DOMINIO ?>"
-    </script>
-
-    <script>
-  window.fbAsyncInit = function() {
-    FB.init({
-      appId      : '951869778224142',
-      xfbml      : true,
-      version    : 'v2.5'
-    });
-  };
-
-  (function(d, s, id){
-     var js, fjs = d.getElementsByTagName(s)[0];
-     if (d.getElementById(id)) {return;}
-     js = d.createElement(s); js.id = id;
-     js.src = "//connect.facebook.net/en_US/sdk.js";
-     fjs.parentNode.insertBefore(js, fjs);
-   }(document, 'script', 'facebook-jssdk'));
-</script>
-
-<script type="text/javascript">
-    window.smartlook||(function(d) {
-    var o=smartlook=function(){ o.api.push(arguments)},h=d.getElementsByTagName('head')[0];
-    var c=d.createElement('script');o.api=new Array();c.async=true;c.type='text/javascript';
-    c.charset='utf-8';c.src='//rec.getsmartlook.com/recorder.js';h.appendChild(c);
-    })(document);
-    smartlook('init', '6d99d26be9c4e37d64b579979d73545a92bc6af3');
-</script>
+	 <link rel="icon" href="<?php echo _DOMINIO ?>images/diseno/favicon.ico">
 
 </head>
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-custom"  ng-controller="principal" ng-init="initTCS()">
+<body id="page-top" data-spy="scroll" data-target=".navbar-custom"  ng-controller="principal" ng-init="initTCS()" class="bgPrincipal">
 	<?php include(_PLANTILLAS."interfaz/cabezote.php") ?>
 	
 	
@@ -105,6 +64,16 @@
     <script type="text/javascript">
       var dominio = "<?php echo _DOMINIO?>";
     </script>
+    <script type="text/javascript">
+
+    $(document).ready(function(){
+      $('.carousel').carousel({
+        interval: 4000
+      })
+
+    });
+
+  </script>
 </body>
 </html>
 <!--<?php include(_PLANTILLAS."interfaz/menu_principal.php") ?>-->
