Cambio del color de la ventana

--- a/html/interfaz/index.html
+++ b/html/interfaz/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="<?php echo $info_id[0]['notas']?>" />
   	<meta name="keywords" content="<?php echo $info_id[0]['keywords']?>" />
   	<meta name="author" content="The Cupcakes Store" />
+    <meta name="theme-color" content="#5E95C7">
     <title><?php echo _NOMBRE_EMPRESA?> - <?php echo $info_id[0]['titulo']?></title>
 
     <!-- CSS -->
