Ajustes de fallas leves

--- a/admin/html/interfaz/contenido.html
+++ b/admin/html/interfaz/contenido.html
@@ -151,7 +151,7 @@ else {?>
 				<input type="hidden" id="id_padre" name="id_padre" size="53" value="<? echo $id_padre;?>">
 			</td>
 		</tr>
-		<?php if($tipo_contenido == 8 or $tipo_contenido == 9 or $tipo_contenido == 61){?>
+		<?php if($tipo_contenido == 8 or $tipo_contenido == 9 or $tipo_contenido == 61 or $tipo_contenido == 10){?>
 			<tr>
 				<td>
 					Tipo Contenido
